Implement GameFragment data binding. Add the "Finish game" button to the GameFragment layout.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="you_won">You won!</string>
     <string name="you_lost">You lost!</string>
     <string name="the_word_was">" The word was %1$s"</string>
+    <string name="finish_game_button">Finish game</string>
 </resources>
