--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
     <string name="app_name">Guessing Game</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hello_blank_fragment">QuestionsFragment</string>
     <string name="guess_hint">Guess a letter</string>
     <string name="button_text">Guess!</string>
     <string name="lives_left">You have %s lives left.</string>
@@ -11,4 +10,6 @@
     <string name="you_lost">You lost!</string>
     <string name="the_word_was">" The word was %1$s"</string>
     <string name="finish_game_button">Finish game</string>
+    <string name="menu_game">game</string>
+    <string name="menu_questions">questions</string>
 </resources>
