--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,8 @@
     <string name="the_minimum_answer_length_is_characters">The minimum answer length is %d characters</string>
     <string name="the_minimum_answer_length_is_characters_and_for_the_question">The minimum answer length is %1$d characters and %2$d for the question</string>
     <string name="question_active">Active?</string>
+    <string name="switch_show">show</string>
+    <string name="button_apply">apply</string>
+    <string name="button_delete">delete</string>
+    <string name="button_cancel">cancel</string>
 </resources>
