--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@
     <string name="question_active">Active?</string>
     <string name="switch_show">show</string>
     <string name="button_apply">apply</string>
-    <string name="button_delete">delete</string>
+    <string name="button_delete">Delete</string>
     <string name="button_cancel">Cancel</string>
     <string name="edit_question">Edit the question</string>
     <string name="save">Save</string>
