Update the Recycler View using Composer.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="button_cancel">Cancel</string>
     <string name="edit_question">Edit the question</string>
     <string name="save">Save</string>
+    <string name="delete">delete question</string>
 </resources>
